# groth16-malleability

./: README.md  package-lock.json  solution.js
arkworks/: Cargo.toml
arkworks/src/: linear_dep.rs  main.rs  unused_pub.rs
circom/: jest.config.ts  package-lock.json  package.json  tsconfig.json
circom/circuits/: linear_dep.circom  unused_pub.circom
circom/scripts/: compile-circuit.ts
circom/test/: linear_dep.test.ts  new-lin-dep.test.ts  unused_pub.test.ts
