[package]
name = "arkworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-groth16 = { git = "https://github.com/akinovak/groth16" }
ark-relations = { version = "^0.3.0" }
ark-ff = { version = "^0.3.0" }
ark-ec = { version = "^0.3.0" }
ark-std = { version = "^0.3.0" }

[dev-dependencies]
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }